Biblio note: tested and fixed wrap/nowrap issue

--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -115,7 +115,7 @@ dl.bibliomultiselect .form-item {
   }
   
   .biblio-note p {
-display:none;
+display: inline;
   }
 
 .biblio-authors a {
